--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
+@media (max-width: 992px) {
+  .content-left {
+    border: 0px solid !important; } }
+
+.mycontent {
+  padding-right: 20px; }
+  .mycontent img {
+    margin-left: 20px;
+    margin-right: 10px; }
+
 .navbar-inverse {
   background-color: #283593;
   color: #ffffff; }
@@ -40,3 +50,6 @@
   min-height: 475px;
   position: relative;
   top: -25px; }
+
+.content-left {
+  border-right: 1px solid #333; }
